# AstroGraphicRust

./: Cargo.toml  README.md  rustfmt.toml  taplo.toml
.github/workflows/: rust.yml
astro-app/: Cargo.toml  pososat.txt  pososat2.txt
astro-app/src/: main.rs
astro-gui-lib/: Cargo.toml
astro-gui-lib/src/: lib.rs
astrorust_app/: Cargo.toml
astrorust_app/src/: main.rs
astrorust_gui_lib/: Cargo.toml
astrorust_gui_lib/src/: lib.rs
astrorust_lib/: Cargo.toml
astrorust_lib/benches/: kepler_ellipse_householder.rs  kepler_ellipse_newton.rs  solve_kepler_ellipse.rs  solve_kepler_hyperbola.rs
astrorust_lib/config/planets/: kerbal.toml  kerbal.yml  solar.yml
astrorust_lib/src/: angle.rs  config.rs  kepler_equation.rs  lib.rs  orbit.rs  state_vectors.rs  time.rs  units.rs  util.rs
astrorust_lib/src/orbit/: elliptic.rs  mod.rs  orbit.rs  orbit_3d.rs
astrorust_lib/src/orbit/flat/: circular.rs  elliptic.rs  hyperbolic.rs  mod.rs
config/: config.yml
config/star_system/: kerbal.yml
config/system/: solar.yml
src/: main.rs
