[package]
name = "astrorust_gui_lib"
version = "0.1.0"
authors = ["Graph-Donte-Crypto"]
edition = "2018"

[lib]
name = "astrorust_gui_lib"
path = "src/lib.rs"

[dependencies]
astrorust_lib = { path = "../astrorust_lib" }
kiss3d = {git = "https://github.com/Graph-Donte-Crypto/kiss3d"}
kiss3d-trackball = {git = "https://github.com/Graph-Donte-Crypto/kiss3d-trackball"}
lazy_static = "1.4.0"
