[package]
name = "astrorust_lib"
version = "0.1.0"
authors = ["Graph-Donte-Crypto <Dimasik841@gmail.com>", "Artur Sinila <freesoftware@logarithmus.dev>"]
edition = "2018"

[lib]
name = "astrorust_lib"
path = "src/lib.rs"

[dependencies]
getset = "0.1.1"
nalgebra = "0.26.1"
num-traits = "0.2.14"
typed-builder = "0.9.0"
typenum = "1.14.0"
