[package]
name = "astrorust_lib"
version = "0.1.0"
authors = [
  "Graph-Donte-Crypto <Dimasik841@gmail.com>",
  "Artur Sinila <freesoftware@logarithmus.dev>",
]
edition = "2018"

[lib]
name = "astrorust_lib"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.43", default-features = false }
derive_builder = "0.20.2"
getset = "0.1.3"
nalgebra = "0.26.2"
num-traits = "0.2.19"
roots = "0.0.8"
typenum = "1.17.0"
serde = { version = "1", features = ["derive"] }
serde-saphyr = "0.0.19"
anyhow = "1"
[dev-dependencies]
similar-asserts = "1.6.0"
criterion = { version = "0.5.1" }

[[bench]]
name = "kepler_ellipse_householder"
harness = false

[[bench]]
name = "kepler_ellipse_newton"
harness = false

[[bench]]
name = "kepler_hyperbola"
harness = false
